Fix text alignment of some blocks

--- a/src/main/_docs/assets/css/screen.scss
+++ b/src/main/_docs/assets/css/screen.scss
@@ -7,3 +7,7 @@
 @import "pygments";
 @import "font-awesome";
 @import "style";
+
+code {
+  line-height: 17px;
+}
